--- a/Training PowerBI/README
+++ b/Training PowerBI/README
@@ -1,1 +1,1 @@
-##  Обучение по книге "PowerBI-моделирование на экспертном уровне"
+### Обучение по книге "PowerBI-моделирование на экспертном уровне"
